# Cerberus-Cache-Scraper

./: .gitignore  Cargo.toml  readme.md  results.json  results2.json  urls.txt  urls2.txt
src/: cache_checker.rs  config.rs  dns_resolver.rs  main.rs
