[package]
name = "cache_scraper"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
clap = "3.0"
indicatif = "0.16"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
trust-dns-resolver = "0.21"


